--- a/csharpcore/ShiMart/ShiMart.csproj
+++ b/csharpcore/ShiMart/ShiMart.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>GildedRoseKata.Program</StartupObject>
+    <StartupObject>ShiMartKata.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
