--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
 
-group = 'com.gildedrose'
+group = 'com.ShiMart'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
