--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -5,8 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.gildedrose</groupId>
-    <artifactId>gilded-rose-kata</artifactId>
+    <groupId>com.ShiMart</groupId>
+    <artifactId>shi-mart-kata</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
